Move clustering tests over